--- a/cliente/src/index.html
+++ b/cliente/src/index.html
@@ -7,29 +7,29 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
+    <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css"> -->
+    <!-- <script src="./assets/bootstrap/js/bootstrap.min.js"></script> -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/plugins/images/favicon.png">
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="./assets/plugins/images/favicon.png"> -->
     <title>Ample Admin Template - The Ultimate Multipurpose admin template</title>
     <!-- Bootstrap Core CSS -->
-    <link href="./assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="./assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Menu CSS -->
-    <link href="./assets/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet">
-    <link href="./assets/css/animate.css" rel="stylesheet">
+    <!-- <link href="./assets/plugins/bower_components/sidebar-nav/dist/sidebar-nav.min.css" rel="stylesheet"> -->
+    <!-- <link href="./assets/css/animate.css" rel="stylesheet"> -->
     <!-- Custom CSS -->
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="./assets/less/icons/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="./assets/css/style.css" rel="stylesheet"> -->
+    <!-- <link href="./assets/less/icons/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- color CSS -->
-    <link href="./assets/css/colors/default.css" id="theme" rel="stylesheet">
+    <!-- <link href="./assets/css/colors/default.css" id="theme" rel="stylesheet"> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!-- [if lt IE 9]>-->
 </head>
 
-<body class="fix-header">
+<body class="fix-header hold-transition sidebar-mini layout-fixed" >
     <!-- ============================================================== -->
     <!-- Preloader -->
     <!-- ============================================================== -->
@@ -41,7 +41,7 @@
     <!-- ============================================================== -->
     <!-- Wrapper -->
     <!-- ============================================================== -->
-    <div id="wrapper">
+    <div class="wrapper">
         <app-root></app-root>
     </div>
 </body>
